[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/LCD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Interface.gd" type="Script" id=2]
[ext_resource path="res://assets/Label.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/Button.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 81
outline_size = 4
outline_color = Color( 0.0509804, 0.109804, 0.00784314, 1 )
extra_spacing_char = 4
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = -2.15845
margin_bottom = 93.8416
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.298039, 0.917647, 0.129412, 1 )
text = "Time: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TimeTimer" type="Timer" parent="."]

[node name="GameOverLabel" type="Label" parent="."]
visible = false
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -83.5
margin_right = 360.0
margin_bottom = 83.5
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.443137, 0.87451, 1 )
text = "GAME OVER
%c WON!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button" type="Button" parent="."]
visible = false
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -244.9
margin_top = -362.114
margin_right = 244.9
margin_bottom = -239.914
theme = ExtResource( 4 )
shortcut_in_tooltip = false
text = "Play Again?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TimeTimer" to="." method="_on_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
